--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <title>Antman</title>
+    <link rel="stylesheet" href="./src/resources/styles/index.css">
 </head>
 <body>
+    <button id="control">
+        Start
+    </button>
     <canvas id="game"></canvas>
-    <script src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
