--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <link rel="stylesheet" href="./src/resources/styles/index.css">
 </head>
 <body>
-    <button id="control">
-        Start
-    </button>
+    <div>
+        <span id="chrono">00:00:00</span>
+        <button id="control">
+            Start
+        </button>
+    </div>
     <canvas id="game"></canvas>
     <script type="module" src="./index.js"></script>
 </body>
