add a button to show pheromones circle

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <button id="control">
             Start
         </button>
+        <button id="pheromones">
+            Phéromones
+        </button>
     </div>
     <canvas id="game"></canvas>
     <script type="module" src="./index.js"></script>
