--- a/index.html
+++ b/index.html
@@ -6,14 +6,17 @@
     <link rel="stylesheet" href="./src/resources/styles/index.css">
 </head>
 <body>
-    <div>
+    <div id="un">
         <span id="chrono">00:00:00</span>
-        <button id="control">
-            Start
-        </button>
-        <button id="pheromones">
-            Phéromones
-        </button>
+        <div>
+            <button id="control">
+                Start
+            </button>
+            <button id="pheromones">
+                Phéromones
+            </button>
+        </div>
+
     </div>
     <canvas id="game"></canvas>
     <script type="module" src="./index.js"></script>
