--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <title>Antman</title>
     <link rel="stylesheet" href="./src/resources/styles/index.css">
+    <style>
+        #game {
+            height: 90vh;
+            width: auto;
+            display: block;
+        }
+    </style>
 </head>
 <body>
     <div id="un">
